--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 <div class="col-md-12" data-aos="fade-up" data-aos-delay="400">
                     <h1 class="text-white font-weight-bold">Bus Pass System</h1>
-                    <p class="mb-5">A project developed by our team!!</p>
+                    <p class="mb-5">A bus ride is like being in another worlds</p>
                     <p><a href="book.php" class="btn btn-primary py-3 px-5 text-white font-weight-bold">Book Now!</a>
                     </p>
                 </div>
