Bus Pass System

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
     <nav class="navbar navbar-expand-xl navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img src="https://fontmeme.com/permalink/201111/84c7c96adf6c1e34b42a0484503ef01b.png" alt="calligraphy-fonts" border="0"></a>
+        <a class="navbar-brand" href="#"><img
+                src="https://fontmeme.com/permalink/201111/84c7c96adf6c1e34b42a0484503ef01b.png" alt="calligraphy-fonts"
+                border="0"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -83,7 +85,70 @@
 
     </div>
 
+    <div class="site-section">
 
+        <div class="container">
+            <div class="row justify-content-center mb-5">
+                <div class="col-md-7 text-center">
+                    <h2 class="font-weight-dark text-black">Our Destinations</h2>
+                    <h1 class="heading">Our Destinations</h1>
+                    <p class="color-black-opacity-5">Choose Your Next Destination</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                    <a href="#" class="unit-1 text-center">
+                        <img src="images/delhi.jpg" alt="Image" class="img-fluid" style="height: 200px">
+                        <div class="unit-1-text">
+                            <h3 class="unit-1-heading">Delhi</h3>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                    <a href="#" class="unit-1 text-center">
+                        <img src="images/agra.jpg" alt="Image" class="img-fluid" style="height: 200px">
+                        <div class="unit-1-text">
+                            <h3 class="unit-1-heading">Agra</h3>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                    <a href="#" class="unit-1 text-center">
+                        <img src="images/mathura.jpg" alt="Image" class="img-fluid" style="height: 200px">
+                        <div class="unit-1-text">
+                            <h3 class="unit-1-heading">Mathura</h3>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                    <a href="#" class="unit-1 text-center">
+                        <img src="images/vrindawan.jpg" alt="Image" class="img-fluid" style="height: 200px">
+                        <div class="unit-1-text">
+                            <h3 class="unit-1-heading">Vrindavan</h3>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                    <a href="#" class="unit-1 text-center">
+                        <img src="images/barsana.jpg" alt="Image" class="img-fluid" style="height: 200px">
+                        <div class="unit-1-text">
+                            <h3 class="unit-1-heading">Barsana</h3>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                    <a href="#" class="unit-1 text-center">
+                        <img src="images/chamuhun.jpg" alt="Image" class="img-fluid" style="height: 200px">
+                        <div class="unit-1-text">
+                            <h3 class="unit-1-heading">Chaumuhan</h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
