--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="site-section">
-        <h1 class="heading">TEAM</h1>
+        <h1 class="heading" style="margin-bottom: 80px;">TEAM</h1>
         <div class="container overlap-section">
             <div class="row">
                 <div class="col-md-6 col-lg-6 mb-6 mb-lg-0">
@@ -90,9 +90,8 @@
         <div class="container">
             <div class="row justify-content-center mb-5">
                 <div class="col-md-7 text-center">
-                    <h2 class="font-weight-dark text-black">Our Destinations</h2>
-                    <h1 class="heading">Our Destinations</h1>
-                    <p class="color-black-opacity-5">Choose Your Next Destination</p>
+                    <h1 class="heading margin-bottom: 70px">Our Destinations</h1>
+                    <p class="subheading">Choose Your Next Destination</p>
                 </div>
             </div>
             <div class="row">
