--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-xl navbar-light bg-light">
+    <nav class="navbar navbar-dark navbar-expand-xl fixed-top" style="background-color: rgba(32, 31, 31, 0);">
         <a class="navbar-brand" href="#"><img
                 src="https://fontmeme.com/permalink/201111/84c7c96adf6c1e34b42a0484503ef01b.png" alt="calligraphy-fonts"
                 border="0"></a>
@@ -44,7 +44,7 @@
         </div>
     </nav>
 
-    <div class="site-blocks-cover overlay" style="background-image: url(images/hero_bg_2.jpg);" data-aos="fade"
+    <div class="site-blocks-cover overlay" style="background-image: url(images/hero_bg_2.jpg); background-repeat: no-repeat; background-size: cover; position: relative; " data-aos="fade"
         data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row align-items-center justify-content-center text-center">
@@ -61,37 +61,13 @@
 
     </div>
 
-    <div class="site-section">
-        <h1 class="heading" style="margin-bottom: 80px;">TEAM</h1>
-        <div class="container overlap-section">
-            <div class="row">
-                <div class="col-md-6 col-lg-6 mb-6 mb-lg-0">
-                    <a href="#" class="unit-1 text-center">
-                        <img src="images/img1.jpg" alt="Image" class="img-fluid" style="height: 353px">
-                        <div class="unit-1-text">
-                            <h3 class="unit-1-heading">Riya Gaur</h3>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-6 col-lg-6 mb-6 mb-lg-0">
-                    <a href="#" class="unit-1 text-center">
-                        <img src="images/img2.jpeg" alt="Image" class="img-fluid" style="height: 353px">
-                        <div class="unit-1-text">
-                            <h3 class="unit-1-heading">Sameeksha Rathi</h3>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
 
-    </div>
-
-    <div class="site-section">
+    <div class="site-section p-0">
 
         <div class="container">
             <div class="row justify-content-center mb-5">
                 <div class="col-md-7 text-center">
-                    <h1 class="heading margin-bottom: 70px">Our Destinations</h1>
+                    <h1 class="heading margin-bottom: 80px">Our Destinations</h1>
                     <p class="subheading">Choose Your Next Destination</p>
                 </div>
             </div>
@@ -150,6 +126,35 @@
 
     </div>
 
+    <div class="site-section">
+        <div class="row justify-content-center mb-5">
+            <div class="col-md-7 text-center">
+                <h1 class="heading" style="margin-bottom: 80px;">TEAM</h1>
+            </div>
+        </div>
+        <div class="container ">
+            <div class="row">
+                <div class="col-md-6 col-lg-6 mb-6 mb-lg-0">
+                    <a href="#" class="unit-1 text-center">
+                        <img src="images/img1.jpg" alt="Image" class="img-fluid" style="height: 353px">
+                        <div class="unit-1-text">
+                            <h3 class="unit-1-heading">Riya Gaur</h3>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 col-lg-6 mb-6 mb-lg-0">
+                    <a href="#" class="unit-1 text-center">
+                        <img src="images/img2.jpeg" alt="Image" class="img-fluid" style="height: 353px">
+                        <div class="unit-1-text">
+                            <h3 class="unit-1-heading">Sameeksha Rathi</h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 
     <div class="site-section border-top">
         <div class="container">
@@ -161,6 +166,9 @@
             </div>
         </div>
     </div>
+
+
+    
 
     <footer class="site-footer">
         <div class="container">
