--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-xl fixed-top" style="background-color: rgba(32, 31, 31, 0);">
+    <nav class="navbar navbar-dark navbar-expand-xl fixed-top" style="background-color: rgba(32, 31, 31, 0); width: 100%;">
         <a class="navbar-brand" href="#"><img
                 src="https://fontmeme.com/permalink/201111/84c7c96adf6c1e34b42a0484503ef01b.png" alt="calligraphy-fonts"
                 border="0"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navLinks">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#" >Home<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ">
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
@@ -44,11 +44,7 @@
         </div>
     </nav>
 
-<<<<<<< HEAD
-    <div class="site-blocks-cover overlay" style="background-image: url(images/hero_bg_2.jpg); background-repeat: no-repeat; background-size: cover; position: relative; " data-aos="fade"
-=======
-    <div class="site-blocks-cover overlay" style="background-image: url(images/bg.jpg);" data-aos="fade"
->>>>>>> f6724475dfec62f75380cc8a63367a77eecc7da6
+    <div class="site-blocks-cover overlay" style="background-image: url(https://guidetoiceland.imgix.net/470000/x/0/reykjavik-city-buses-the-ultimate-guide-8.jpg?auto=compress%2Cformat&ch=Width%2CDPR&dpr=1&ixlib=php-3.3.0&w=883&s=8a58f92e92e63e8d3b79c655a75ba885); background-repeat: no-repeat; background-size:cover; position: relative; height: 800px; opacity: 0.98; width: 100%;" data-aos="fade"
         data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row align-items-center justify-content-center text-center">
@@ -127,8 +123,20 @@
                 </div>
             </div>
         </div>
-
     </div>
+
+
+    <div class="site-section p-0 mt-5">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <h2 class="mb-5 text-black">Want To Travel With Us?</h2>
+                    <p class="mb-0"><a href="book.php" class="btn btn-primary py-3 px-5 text-white">Book Now</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <div class="site-section">
         <div class="row justify-content-center mb-5">
@@ -159,17 +167,6 @@
 
     </div>
 
-
-    <div class="site-section border-top">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-md-12">
-                    <h2 class="mb-5 text-black">Want To Travel With Us?</h2>
-                    <p class="mb-0"><a href="book.php" class="btn btn-primary py-3 px-5 text-white">Book Now</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
     
@@ -227,6 +224,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+    <script src="bus.js"></script>
 </body>
 
 </html>
