--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </nav>
 
-    <div class="site-blocks-cover overlay" style="background-image: url(images/bg.jpg);" data-aos="fade"
+    <div class="site-blocks-cover overlay" style="background-image: url(images/bg1.jpg);" data-aos="fade"
         data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row align-items-center justify-content-center text-center">
