--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     <p class="mb-5">A bus ride is like being in another world.</p>
                     <p><a href="book.php" class="btn btn-primary py-3 px-5 text-white font-weight-bold">Book Now!</a>
                     </p>
+                    <p><a href="book.pdf" download="newfilename">Download the pdf</a></p>
                 </div>
             </div>
         </div>
