--- a/index.html
+++ b/index.html
@@ -14,6 +14,33 @@
 </head>
 
 <body>
+    <!-- <div class="header">
+        <a class="navbar-brand" href="#"><img
+            src="https://fontmeme.com/permalink/201111/84c7c96adf6c1e34b42a0484503ef01b.png" alt="calligraphy-fonts"
+            border="0"></a>
+    </div>
+    <input type="checkbox" name="" id="check">
+    <label for="check" class = "show-btn"> 
+        <i class = "fa fa-bars"></i>
+    </label>
+    <label for="check" class = "hide-btn"> 
+        <i class = "fa fa-times"></i>
+    </label>
+    <div class="bar">
+        <ul>
+            <li><a href="#"><span>Home</span></a></li>
+            <li><a href="#"></i><span>About</span></a></li>
+            <li><a href="#"><span>Contact</span></a></li>
+            <li><a href="#"><span>Manage Pass</span></a></li>
+            <li><a href="#"><span>Bus Details</span></a></li>
+        </ul>
+        <div class="social">
+            <a href="#"><i class="fa fa-facebook-square"></i></a>
+            <a href="#"><i class="fa fa-youtube-square"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+        </div>
+    </div> -->
+
     <nav class="navbar navbar-dark navbar-expand-xl fixed-top" style="background-color: rgba(32, 31, 31, 0); width: 100%;">
         <a class="navbar-brand" href="#"><img
                 src="https://fontmeme.com/permalink/201111/84c7c96adf6c1e34b42a0484503ef01b.png" alt="calligraphy-fonts"
