--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-<<<<<<< HEAD
     <!-- <div class="header">
         <a class="navbar-brand" href="#"><img
             src="https://fontmeme.com/permalink/201111/84c7c96adf6c1e34b42a0484503ef01b.png" alt="calligraphy-fonts"
@@ -42,11 +41,8 @@
         </div>
     </div> -->
 
-    <nav class="navbar navbar-dark navbar-expand-xl fixed-top" style="background-color: rgba(32, 31, 31, 0); width: 100%;">
-=======
     <nav class="navbar navbar-dark navbar-expand-xl fixed-top"
         style="background-color: rgba(32, 31, 31, 0); width: 100%;">
->>>>>>> 3664bc5579c0abc7e380ae8277b3deecc830d910
         <a class="navbar-brand" href="#"><img
                 src="https://fontmeme.com/permalink/201111/84c7c96adf6c1e34b42a0484503ef01b.png" alt="calligraphy-fonts"
                 border="0"></a>
@@ -86,7 +82,7 @@
                     <p class="mb-5">A bus ride is like being in another world.</p>
                     <p><a href="book.php" class="btn btn-primary py-3 px-5 text-white font-weight-bold">Book Now!</a>
                     </p>
-                    <p><a href="book.pdf" download="newfilename">Download the pdf</a></p>
+                    <p><a href="TAFL2-Riya Gaur.pdf" download="Assignment">Download the pdf</a></p>
                 </div>
             </div>
         </div>
