--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,10 @@
 
   <link rel="stylesheet" href="css/aos.css">
 
+  <link rel="stylesheet" href="css/Bus.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+  <link rel="stylesheet" href="css/contact.css">
 
 </head>
 
@@ -44,7 +45,7 @@
       <div class="site-mobile-menu-body"></div>
     </div>
 
-    <header class="site-navbar py-1" role="banner">
+    <!-- <header class="site-navbar py-1" role="banner">
 
       <div class="container">
         <div class="row align-items-center">
@@ -72,21 +73,55 @@
         </div>
       </div>
 
-    </header>
+    </header> -->
+
+    <nav class="navbar navbar-light navbar-expand-xl fixed-top" style=" width: 100%; background-color: rgba(0, 0, 0, 0);">
+      <a class="navbar-brand" href="#"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
+          style="max-width: 70px; padding-left: 10px;"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- <div class="collapse navbar-collapse" id="navLinks">
+        <ul class="navbar-nav margin" style="padding-right: 50px;">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Manage Pass</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="bus_details.html">Bus Details</a>
+          </li>
+        </ul>
+      </div> -->
+    </nav>
 
 
 
 
 
-    <div class="site-blocks-cover inner-page-cover" style="background-image: url(images/hero_bg_2.jpg);" data-aos="fade"
-      data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover inner-page-cover"
+      style="background-image: url(https://guidetoiceland.imgix.net/470000/x/0/reykjavik-city-buses-the-ultimate-guide-8.jpg?auto=compress%2Cformat&ch=Width%2CDPR&dpr=1&ixlib=php-3.3.0&w=883&s=8a58f92e92e63e8d3b79c655a75ba885); height: 800px; opacity:0.95;"
+      data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
-        <div class="row align-items-center justify-content-center text-center">
-
+        <div class="row align-items-center justify-content-center text-center" style="padding-top: 60px; margin-top:0;">
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-            <h1 class="text-white font-weight-light">Get In Touch</h1>
-            <div><a href="index.html">Home</a> <span class="mx-2 text-white">&bullet;</span> <span
-                class="text-white">Contact</span></div>
+            <h1 class="text-white" style=" font-weight: 500; font-size: 80px;">Get In Touch</h1>
+            <div style="font-size: 17px;">
+              <a href="index.html" style="color: rgb(236, 234, 234);">Home</a>
+              <span class="mx-2 text-white" >&bullet;</span>
+              <a href="index.html" style="color: rgb(236, 234, 234);">Manage Pass</a>
+              <span class="mx-2 text-white"  >&bullet;</span>
+              <a href="index.html" style="color: rgb(236, 234, 234);">Bus Details</a>
+            </div>
 
           </div>
         </div>
@@ -98,13 +133,13 @@
     <div class="site-section bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-md-7 mb-5">
+          <div class="col-md-7 mb-5" style="margin: 30px auto;">
 
-            <img src="images/gla.jpeg" style="height: inherit; width: inherit">
+            <img src="images/gla.jpg" style="height: 300px; width: 450px;">
 
 
           </div>
-          <div class="col-md-5">
+          <div class="col-md-5" style="margin: 50px auto;">
 
             <div class="p-4 mb-3 bg-white">
               <p class="mb-0 font-weight-bold">Address</p>
@@ -188,6 +223,8 @@
   <script src="js/aos.js"></script>
 
   <script src="js/main.js"></script>
+
+  <script src="contact.js"></script>
 
 </body>
 
