--- a/index.html
+++ b/index.html
@@ -41,17 +41,16 @@
         </div>
     </div> -->
 
-    <nav class="navbar navbar-dark navbar-expand-xl fixed-top" style="background-color: rgba(32, 31, 31, 0); width: 100%;">
-        <a class="navbar-brand" href="#"><img
-                src="https://fontmeme.com/permalink/201111/84c7c96adf6c1e34b42a0484503ef01b.png" alt="calligraphy-fonts"
-                border="0"></a>
+    <nav class="navbar navbar-light navbar-expand-xl fixed-top" style=" width: 100%; ">
+        <a class="navbar-brand" href="#"><img src = "images/logo.png" alt="calligraphy-fonts"
+                border="0" style="max-width: 70px; padding-left: 10px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navLinks">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav margin" style="padding-right: 50px;">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
                 </li>
@@ -71,7 +70,7 @@
         </div>
     </nav>
 
-    <div class="site-blocks-cover overlay" style="background-image: url(images/bg1.jpg);" data-aos="fade"
+    <div class="site-blocks-cover overlay" style="background-image: url(https://guidetoiceland.imgix.net/470000/x/0/reykjavik-city-buses-the-ultimate-guide-8.jpg?auto=compress%2Cformat&ch=Width%2CDPR&dpr=1&ixlib=php-3.3.0&w=883&s=8a58f92e92e63e8d3b79c655a75ba885); height: 800px;" data-aos="fade"
         data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row align-items-center justify-content-center text-center">
