--- a/about.html
+++ b/about.html
@@ -97,10 +97,10 @@
           </div>
           <div class="col-md-6 pl-md-5">
             <h2 class="font-weight-light text-black mb-4">About Project</h2>
-            <p>The project entitled “Bus Pass System” is developed using HTML and CSS as Front end and PHP as Back end.
+            <p>The project entitled “Bus Pass System” is developed using HTML, CSS and Javascript as Front-end technologies.
               Bus pass registration is useful for passengers who are facing problems with the current manual work of bus
               pass registration and renewal. His/her renewal or registration can be done through online transaction. In
-              the manual system the user has to go on particular date and time, if they fail then the renewal cannot be
+              the manual system, the user has to go on particular date and time, if they fail then the renewal cannot be
               done. This online bus pass system application will help candidates save their time and renewal bus pass
               without standing in a line for hours. Initially user needs to register with the application by submitting
               their details through online. The administrator will verify the candidate username and password and
