--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
 
     </header> -->
 
-    <nav class="navbar navbar-light navbar-expand-xl fixed-top" style=" width: 100%; background-color: rgba(0, 0, 0, 0);">
+    <nav class="navbar navbar-light navbar-expand-xl fixed-top" style=" width: 100%;">
       <a class="navbar-brand" href="#"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
           style="max-width: 70px; padding-left: 10px;"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
@@ -109,7 +109,7 @@
 
 
     <div class="site-blocks-cover inner-page-cover"
-      style="background-image: url(https://guidetoiceland.imgix.net/470000/x/0/reykjavik-city-buses-the-ultimate-guide-8.jpg?auto=compress%2Cformat&ch=Width%2CDPR&dpr=1&ixlib=php-3.3.0&w=883&s=8a58f92e92e63e8d3b79c655a75ba885); height: 800px; opacity:0.95;"
+      style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 760px; opacity:0.96;"
       data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row align-items-center justify-content-center text-center" style="padding-top: 60px; margin-top:0;">
@@ -130,16 +130,16 @@
 
 
 
-    <div class="site-section bg-light">
+    <div class="site-section bg-light ">
       <div class="container">
-        <div class="row">
-          <div class="col-md-7 mb-5" style="margin: 30px auto;">
+        <div class="row content">
+          <div class="col-lg- mb-5" style="margin: 30px auto;">
 
             <img src="images/gla.jpg" style="height: 300px; width: 450px;">
 
 
           </div>
-          <div class="col-md-5" style="margin: 50px auto;">
+          <div class="col-lg-4" style="margin: 50px auto;">
 
             <div class="p-4 mb-3 bg-white">
               <p class="mb-0 font-weight-bold">Address</p>
@@ -224,7 +224,7 @@
 
   <script src="js/main.js"></script>
 
-  <script src="contact.js"></script>
+  <script src="js/contact.js"></script>
 
 </body>
 
