--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         </div>
     </nav>
 
-    <div class="site-blocks-cover overlay" style="background-image: url(https://guidetoiceland.imgix.net/470000/x/0/reykjavik-city-buses-the-ultimate-guide-8.jpg?auto=compress%2Cformat&ch=Width%2CDPR&dpr=1&ixlib=php-3.3.0&w=883&s=8a58f92e92e63e8d3b79c655a75ba885); height: 800px;" data-aos="fade"
+    <div class="site-blocks-cover" style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 730px; opacity: 0.93;" data-aos="fade"
         data-stellar-background-ratio="0.5">
         <div class="container">
-            <div class="row align-items-center justify-content-center text-center">
+            <div class="row align-items-center justify-content-center text-center main">
 
                 <div class="col-md-12" data-aos="fade-up" data-aos-delay="400">
                     <h1 class="text-white font-weight-bold">Bus Pass System</h1>
@@ -153,16 +153,7 @@
     </div>
 
 
-    <div class="site-section p-0 mt-5">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-md-12">
-                    <h2 class="mb-5 text-black">Want To Travel With Us?</h2>
-                    <p class="mb-0"><a href="book.php" class="btn btn-primary py-3 px-5 text-white">Book Now</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
+
 
 
     <div class="site-section">
@@ -195,6 +186,16 @@
     </div>
 
 
+    <div class="site-section p-0 mt-5">
+        <div class="container">
+            <div class="row text-center book" >
+                <div class="col-md-12">
+                    <h2 class="mb-5 text-black">Want To Travel With Us?</h2>
+                    <p class="mb-5"><a href="book.php" class="btn btn-primary py-3 px-5 text-white">Book Now</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
@@ -206,8 +207,6 @@
                         <h3 class="footer-heading mb-4">About Travelers</h3>
                         <p>Provides student a pass for their daily life to travel to/from GLA University, Mathura</p>
                     </div>
-
-
 
                 </div>
                 <div class="col-lg-4 mb-5 mb-lg-0" style="margin-left: auto;">
@@ -224,9 +223,6 @@
                         </div>
 
                     </div>
-
-
-
                 </div>
 
 
@@ -252,7 +248,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <script src="bus.js"></script>
+    <script src="js/bus.js"></script>
 </body>
 
 </html>
