--- a/Form.html
+++ b/Form.html
@@ -16,7 +16,7 @@
         }
 
         body {
-            background-color: darkcyan;
+            background-color: rgb(73, 70, 70);
             font-family: 'Open Sans', sans-serif;
             /* height: 100vh; */
             display: flex;
@@ -37,7 +37,7 @@
         }
 
         .header {
-            background-color: lightgrey;
+            background-color: lightgray;
         }
 
         .header h2 {
@@ -86,7 +86,7 @@
         button {
             display: inline-block;
             width: 30%;
-            background-color: darkslateblue;
+            background-color: rgb(73, 70, 70);
             color: white;
             text-align: center;
             padding: 15px;
