--- a/Form.html
+++ b/Form.html
@@ -128,7 +128,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h2>Grab Your seat</h2>
+            <h2>Grab Your Seat</h2>
         </div>
         <form class="form" id="form">
             <div class="form-control">
@@ -241,6 +241,7 @@
             if (expdateValue === '') {
                 showError(expdate, "Expiry Date can not be Blank");
             }
+
             else {
                 showSuccess(expdate);
             }
@@ -278,6 +279,7 @@
         function ismob(mob) {
             return /^[6-9]\d{9}$/.test(mob);
         }
+
     </script>
 </body>
 
