--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 
 
         <div class="footer-copyright text-center py-3">
-            <p>Copyright © 2020 All Rights Reserved by <a href="#" target="_blank">Bus Pas</a></p>
+            <p>Copyright © 2020 All Rights Reserved by <a href="#" target="_blank">Bus Pass</a></p>
         </div>
     </footer>
     <!-- Footer -->
